--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ idna==2.8
 pefile==2019.4.18
 PyInstaller==3.6
 pyowm==2.10.0
-pyTelegramBotAPI==3.6.7
+pyTelegramBotAPI==4.2.2
 pytz==2019.3
 pywin32-ctypes==0.2.0
 requests==2.22.0
@@ -21,3 +21,6 @@ mysqlclient==2.1.0
 psycopg2==2.9.2
 mysql_connector_python==8.0.27
 protobuf==3.19.1
+numpy==1.21.4
+pandas==1.3.4
+telebot==0.0.4
